--- a/app/templates/team/index.html
+++ b/app/templates/team/index.html
@@ -1,5 +1,8 @@
 {% extends 'layouts/base.html' %}
 
+{% block page_title %}Team Formation{% endblock %}
+{% block page_description %}Teams are a critical part of Madaktari trips. We have provided the ability to determine optimal team matchings and for you to view current applicant profiles.{% endblock %}
+
 {% block content %}
     <div class="ui stackable grid container">
         <div class="sixteen wide tablet twelve wide computer centered column">
