--- a/app/templates/team/create_team.html
+++ b/app/templates/team/create_team.html
@@ -34,7 +34,16 @@
                     {% for u in users | sort(attribute='last_name') %}
                     {% if u.id != current_user.id %}
                         <tr>
-                            <td>{{ u.first_name }}</td>
+                            <td>
+                              
+                              <img id="profileImg" class="ui avatar image" src="
+                              {% if u.profile_pic != None %} 
+                              {{ u.profile_pic }} 
+                              {% else %} 
+                              {{ url_for('static', filename="images/default_prof.png") }}
+                              {% endif %}
+                              "/>
+                              {{ u.first_name }}</td>
                             <td>{{ u.last_name }}</td>
                             <td><a href="mailto:{{u.email}}">{{ u.email }}</td>
                             <td>
