edit date alert

--- a/app/templates/account/edit_dates.html
+++ b/app/templates/account/edit_dates.html
@@ -117,7 +117,7 @@
                     "data": JSON.stringify(ranges)
                 };
                 $.ajax(settings).done(function (response) {
-                    console.log(response);
+                    alert('Updated your availability!')
                 });
             });
         });
