--- a/app/templates/team/create_team.html
+++ b/app/templates/team/create_team.html
@@ -37,7 +37,7 @@
                             <td>
                               
                               <img id="profileImg" class="ui avatar image" src="
-                              {% if u.profile_pic != None %} 
+                              {% if u.profile.first() != None and u.profile.first().profile_pic != None %} 
                               {{ u.profile.first().profile_pic }} 
                               {% else %} 
                               {{ url_for('static', filename="images/default_prof.png") }}
@@ -46,7 +46,7 @@
                               {{ u.first_name }}</td>
                             <td>{{ u.last_name }}</td>
                             <td><a href="mailto:{{u.email}}">{{ u.email }}</td>
-                            <td>{% if overlapping_dates[u.id] != [] %}{{ overlapping_dates[u.id] }}{% endif %}</td>
+                            <td>{% if overlapping_dates[u.id] != [] %}{{ overlapping_dates[u.id]['start'] }} to {{ overlapping_dates[u.id]['end'] }}{% endif %}</td>
                             <td>
                                 <button class="ui button" onclick="enable_modal('{{ u.full_name() }}', {{ u.id }})">Add to Team</button>
                             </td>
