--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -20,6 +20,10 @@
                                     description='View responses from the volunteers', icon='file text outline icon') }}
                 {{ d.dashboard_option('View All Teams', 'admin.view_all_teams',
                                     description='View all current teams', icon='file text outline icon') }}
+                {{ d.dashboard_option('Edit Feedback Form', 'admin.feedback_create_form_index',
+                                    description='Create/Edit the feedback form for the volunteers', icon='file text outline icon') }}
+                {{ d.dashboard_option('View Feedback Responses', 'admin.feedback_get_responses',
+                                    description='View feedback responses from the volunteers', icon='file text outline icon') }}
             </div>
         </div>
     </div>
