--- a/app/templates/team/team.html
+++ b/app/templates/team/team.html
@@ -23,7 +23,10 @@
                     <button class="ui button blue" id="add_todo" data-teamid="{{ team.id }}">Add a todo item to this team</button>
                     {% endif %}
                     {% if current_user.is_admin() == False %}
-                    <a class="ui button green" href="{{ url_for('admin.submit_team', team_id=team.id) }}">Submit team to administrator for review</a>
+                    <a class="ui button green" href="{{ url_for('admin.submit_team', team_id=team.id) }}">Submit team to administrator for review</a><br><br>
+                    {% if team.is_done != True %}<a class="ui button red" href="{{ url_for('admin.done_team', team_id=team.id, type=1) }}">Mark Team as Done With Trip</a>{% endif %}
+                    {% if team.is_done != False %}<a class="ui button red" href="{{ url_for('admin.done_team', team_id=team.id, type=0) }}">Mark Team as Not Done With Trip</a>
+                    <br>{% endif %}
                     {% endif %}
                     <br>
                     Todos:
