--- a/app/templates/main/form.html
+++ b/app/templates/main/form.html
@@ -10,13 +10,21 @@ This is going to be the main page
 
 {% block content %}
     <div class="ui text container">
-      <h1>Hello {% if not (current_user.is_authenticated) %} world {% else %} {{ current_user.full_name() }}. Your role is {{ current_user.role.name }}. {% endif %}</h1>
+      <h1>Hello and welcome to Madaktari's Volunteer Platform.</h1>
       {% if current_user.is_authenticated %} 
-      {% if current_user.is_role("applicant") and content is not none %}
-        <div id="fb-render"></div>
-        <form id="submitForm">
-          <input type='submit' class='btn btn-success' value='Submit Form'/>
-        </form>
+        {% if current_user.is_role("rejected") %}
+        <p>At this time, we are unable to approve your application. Please visit the main madaktari.org website and attempt to 
+        contact an administrator/manager. Thank you for your interest. </p>
+        {% elif current_user.is_role("pending") %}
+        <p>We are currently reviewing your application, please click on the madaktari logo in the top left to return home</p>
+        {% elif current_user.is_role("accepted") %}
+        <p>Hello,<br> Thank you for applying to Madaktari Africa. Congratulations! You have now been accepted as a volunteer for us. 
+        Return home and start with your team formation!</p>
+        {% elif current_user.is_role("applicant") and content is not none %}
+          <div id="fb-render"></div>
+          <form id="submitForm">
+            <input type='submit' class='btn btn-success' value='Submit Form'/>
+          </form>
 <div class="ui basic modal">
   <div class="ui icon header">
     <i class="upload icon"></i>
