--- a/app/templates/admin/create_form.html
+++ b/app/templates/admin/create_form.html
@@ -31,7 +31,7 @@
         <div id="fb-editor"></div>
         <div id="fb-editor"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-        <script src="http://formbuilder.online/assets/js/form-builder.min.js"></script>
+        <script src="https://formbuilder.online/assets/js/form-builder.min.js"></script>
         <script>
           $(document).ready(function() {
             window.formBuilder;
