--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -41,16 +41,13 @@
             <div class="ui secondary stackable menu">
                 <div class="ui container">
                     <div class="item">
-                      <h2><a href="/">Madaktari Africa</a></h2>
+                      <h2><a href="http://www.madaktari.org" target="_blank">Madaktari Africa</a></h2>
                     </div>
                     <div class="right menu">
                         <div class="item">
-                          <a href="http://www.madaktari.org" target="_blank">Go back to main site</a>
+                          <a href="/" >Home</a>
                         </div>
                           {% if current_user.is_authenticated %}
-                        <div class="item">
-                          <p>Hello <strong>{{ current_user.first_name }}</strong></p>
-                        </div>
                         <div class="item">
                           <p><a href="{{ url_for('account.manage') }}">Settings</a></p>
                         </div>
